[project]
name = "video-use-cht"
version = "0.1.0"
description = "Traditional-Chinese / Taiwanese fork of video-use: local Breeze-ASR-25/26 transcription instead of ElevenLabs Scribe"
license = { file = "LICENSE" }
# WhisperX / pyannote / torch do not yet ship wheels for 3.13+. Pin to 3.10–3.12.
requires-python = ">=3.10,<3.13"
dependencies = [
    "whisperx",        # ASR (faster-whisper/CT2) + wav2vec2 alignment + pyannote diarization
    "librosa",
    "matplotlib",
    "pillow",
    "numpy",
]

[project.optional-dependencies]
animations = ["manim"]
# Only needed if you transcode Breeze-ASR-26 (Taigi) HF weights to CTranslate2 locally.
convert = ["ctranslate2", "transformers"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
